# dust

./: .gitignore  235.bundle.js  300.bundle.js  605.bundle.js  Cargo.toml  README.md  TODO.md  emu.bundle.js  index.html  renderer_3d.bundle.js  ui.bundle.js  ui.css
.cargo/: config.toml
.github/workflows/: build-release-macos-app-bundles.yml  build-release.yml  clippy.yml  deploy-web.yml  run-clippy-and-test.yml
core/: Cargo.toml  build.rs
core/src/: audio.rs  cpu.rs  dldi.rs  ds_slot.rs  emu.rs  flash.rs  gpu.rs  ipc.rs  lib.rs  rtc.rs  spi.rs  wifi.rs
core/src/audio/: capture.rs  channel.rs  io.rs
core/src/cpu/: arm7.rs  arm9.rs  bus.rs  debug.rs  disasm.rs  dma.rs  engines_common.rs  hle_bios.rs  interpreter.rs  irqs.rs  psr.rs  schedule.rs  timers.rs
core/src/cpu/arm7/: bus.rs  dma.rs  irqs.rs  schedule.rs
core/src/cpu/arm7/bus/: access.rs  fallback.rs  ptrs.rs  timings.rs
core/src/cpu/arm9/: bus.rs  cp15.rs  div_engine.rs  dma.rs  irqs.rs  schedule.rs  sqrt_engine.rs
core/src/cpu/arm9/bus/: access.rs  fallback.rs  ptrs.rs  timings.rs
core/src/cpu/arm9/cp15/: perms.rs  ptrs.rs  timings.rs
core/src/cpu/disasm/: arm.rs  common.rs  thumb.rs
core/src/cpu/disasm/arm/: branch.rs  data.rs  mem.rs  other.rs
core/src/cpu/disasm/thumb/: branch.rs  data.rs  mem.rs  other.rs
core/src/cpu/hle_bios/: arm7.rs  arm9.rs  common.rs
core/src/cpu/interpreter/: alu_utils.rs  arm7.rs  arm9.rs  common.rs  regs.rs
core/src/cpu/interpreter/alu_utils/: all.rs  shifts_common.rs
core/src/cpu/interpreter/alu_utils/aarch64/: arithmetic.rs  bit_ops.rs  shifts.rs
core/src/cpu/interpreter/alu_utils/all/: arithmetic.rs  bit_ops.rs  shifts.rs
core/src/cpu/interpreter/alu_utils/x86/: arithmetic.rs  bit_ops.rs  shifts.rs
core/src/cpu/interpreter/arm7/: arm.rs  thumb.rs
core/src/cpu/interpreter/arm7/arm/: branch.rs  data.rs  mem.rs  other.rs
core/src/cpu/interpreter/arm7/thumb/: branch.rs  data.rs  mem.rs  other.rs
core/src/cpu/interpreter/arm9/: arm.rs  thumb.rs
core/src/cpu/interpreter/arm9/arm/: branch.rs  data.rs  mem.rs  other.rs
core/src/cpu/interpreter/arm9/thumb/: branch.rs  data.rs  mem.rs  other.rs
core/src/ds_slot/: rom.rs  spi.rs
core/src/ds_slot/rom/: empty.rs  header.rs  icon.rs  icon_title.rs  key1.rs  normal.rs
core/src/ds_slot/spi/: eeprom_4k.rs  eeprom_fram.rs  empty.rs  flash.rs
core/src/emu/: input.rs  schedule.rs  swram.rs
core/src/gpu/: engine_2d.rs  engine_3d.rs  vram.md  vram.rs
core/src/gpu/engine_2d/: io.rs  render.rs  renderer.rs
core/src/gpu/engine_2d/render/: all.rs  avx2.rs  common.rs
core/src/gpu/engine_3d/: io.rs  matrix.rs  renderer.rs  vertex.rs
core/src/gpu/vram/: access.rs  bank_cnt.rs
core/src/spi/: firmware.rs  power.rs  tsc.rs
core/src/spi/firmware/: default.rs
core/src/wifi/: io.rs
fontawesome/css/: all.min.css  brands.min.css  fontawesome.css  regular.min.css  solid.css  svg-with-js.min.css  v4-shims.css
frontend/desktop/: Cargo.toml  build.rs
frontend/desktop/platform/macos/: Dust.icns  Info.plist
frontend/desktop/shaders/src/: imgui-srgb-aware.frag  imgui.vert
frontend/desktop/src/: audio.rs  config.rs  debug_views.rs  ds_slot_rom.rs  emu.rs  frame_data.rs  game_db.rs  input.rs  main.rs  triple_buffer.rs  ui.rs  utils.rs
frontend/desktop/src/audio/: cpal.rs  input.rs  interp.rs  output.rs
frontend/desktop/src/audio/input/: cpal.rs
frontend/desktop/src/audio/output/: cpal.rs
frontend/desktop/src/config/: saves.rs  setting.rs
frontend/desktop/src/debug_views/: arm7_memory.rs  arm7_state.rs  arm9_memory.rs  arm9_state.rs  audio_channels.rs  bg_maps_2d.rs  common.rs  cpu_disasm.rs  cpu_memory.rs  cpu_state.rs  ds_rom_info.rs  fs.rs  palettes_2d.rs
frontend/desktop/src/debug_views/common/: disasm.rs  memory.rs  range_inclusive.rs  regs.rs  scrollbar.rs  y_pos.rs
frontend/desktop/src/emu/: dldi.rs  ds_slot_rom.rs  gdb_server.rs  renderer_3d.rs  rtc.rs  soft_renderer_3d.rs
frontend/desktop/src/emu/gdb_server/: packets.rs  server.rs  target.xml  threads.xml
frontend/desktop/src/emu/gdb_server/specs/: target.xml  threads.xml
frontend/desktop/src/emu/renderer_3d/: render.rs  renderer.rs
frontend/desktop/src/emu/renderer_3d/render/: utils.rs
frontend/desktop/src/input/: editor.rs  key_codes.rs  keymap.rs  map.rs  map_editor.rs  state.rs  trigger.rs
frontend/desktop/src/ui/: config_editor.rs  imgui_log.rs  imgui_wgpu.rs  log.rs  logging.rs  save_slot_editor.rs  savestate_editor.rs  title_menu_bar.rs  utils.rs  window.rs
frontend/desktop/src/ui/config_editor/: input_map.rs  setting.rs
frontend/desktop/src/ui/imgui_log/: console.rs  drain.rs
frontend/web/: .gitignore  package.json  webpack.config.js
frontend/web/crate/: Cargo.toml
frontend/web/crate/src/: audio.rs  console_log.rs  lib.rs  renderer_3d.rs
frontend/web/src/: index.html  message.ts
pkg/: index.d.ts  index.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
render/soft-2d/: Cargo.toml
render/soft-2d/src/: lib.rs  (+2 more)
render/soft-3d/: Cargo.toml
render/wgpu-2d/: Cargo.toml
render/wgpu-2d/src/: common.rs  lib.rs  threaded.rs
render/wgpu-2d/src/common/: gfx.rs  render.rs
render/wgpu-2d/src/common/render/: bgs.rs
render/wgpu-2d/src/common/render/bgs/: all.rs  avx2.rs
render/wgpu-2d/src/common/shaders/: 3d-accel.wgsl  3d-soft.wgsl  wgpu-2d-accel.wgsl  wgpu-2d-soft.wgsl
render/wgpu-2d/src/threaded/: lockstep_scanlines.rs
render/wgpu-3d/: Cargo.toml
render/wgpu-3d/src/: data.rs  lib.rs  render.rs  threaded.rs  utils.rs
render/wgpu-3d/src/render/: attrs.rs  common.rs  edge_marking.rs  fog.rs  opaque.rs  texture.rs  toon.rs  trans.rs  trans_no_depth_update.rs  w_buffer.rs
resources/: game_db.json
soft-2d/: Cargo.toml
soft-2d/src/: all.rs  avx2.rs  common.rs  lib.rs  sync.rs
soft-2d/src/common/: render.rs
soft-2d/src/common/render/: bgs.rs  objs.rs
soft-2d/src/common/render/bgs/: all.rs  avx2.rs  common.rs
soft-2d/src/common/render/effects/: all.rs
soft-2d/src/sync/: impls.rs
soft-2d/src/threaded/: lockstep_scanlines.rs
soft-3d/: Cargo.toml
soft-3d/src/: lib.rs  render.rs
(+39 files in other folders)
