[workspace]
members = [
    "core",
    "frontend/desktop",
]
resolver = "2"

[profile.release]
debug = true
panic = "abort"

[profile.ci]
inherits = "release"
debug = false
lto = true
codegen-units = 1

[patch.crates-io]
# TODO: Remove and update to 0.26 when imgui-winit-support gets updated
winit = { git = "https://github.com/rust-windowing/winit", rev = "11a44081df97b82108be63a925d8c479bddfdc4d" }
