[workspace]
members = [
    "core",
    "render/soft-2d/base",
    "render/soft-2d",
    "render/soft-3d",
    "render/wgpu-2d",
    "render/wgpu-3d",
    "frontend/desktop",
    "frontend/web/crate",
]
resolver = "2"

[profile.release]
debug = true
panic = "abort"

[profile.ci]
inherits = "release"
debug = false
lto = true
codegen-units = 1
