[package]
name = "dust-core"
version = "0.0.0"
edition = "2021"
publish = false

[features]
log = ["slog"]

# Bus fallback toggling (to temporarily switch to slow memory handlers for breakpoint checking or
# JIT block invalidation)
bft-r = []
bft-w = []

jit = ["bft-w"]

pu-checks = []

interp-timing-details = []
interp-pipeline = []
interp-pipeline-accurate-reloads = ["interp-pipeline"]
interp-arm9-interlocks = ["interp-pipeline"]
interp-r15-write-checks = []

3d-hi-res-coords = []

disasm = []
serde = ["dep:serde"]
xq-audio = []
channel-audio-capture = []
debugger-hooks = ["bft-r", "bft-w"]

[dependencies]
emu-utils = { git = "https://github.com/kelpsyberry/emu-utils" }
proc-bitfield = { version = "0.3", features = ["nightly"] }
bitflags = "2.5"
cfg-if = "1.0"
slog = { version = "2.7", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
arm-decoder = { git = "https://github.com/kelpsyberry/arm-decoder" }
