[package]
name = "dust-soft-2d"
version = "0.0.0"
edition = "2021"
publish = false

[features]
threaded = ["crossbeam-channel"]

[dependencies]
dust-core = { path = "../core" }
proc-bitfield = { git = "https://github.com/Kelpsy/proc-bitfield", features = ["nightly"] }
crossbeam-channel = { version = "0.5", optional = true }
