[package]
name = "dust-desktop"
version = "0.0.0"
edition = "2021"
publish = false

[features]
log = ["slog", "slog-term", "slog-async", "slog-imgui", "dust-core/log"]
debug-views = [
    "imgui-memory-editor",
    "realfft",
    "dust-core/disasm",
    "dust-core/channel-audio-capture",
]
gdb-server = ["gdb-protocol", "dust-core/debugger-hooks"]

discord-presence = ["discord-rpc"]

jit = ["dust-core/jit"]

pu-checks = ["dust-core/pu-checks"]

interp-timing-details = ["dust-core/interp-timing-details"]
interp-pipeline = ["dust-core/interp-pipeline"]
interp-pipeline-accurate-reloads = ["interp-pipeline", "dust-core/interp-pipeline-accurate-reloads"]
interp-arm9-interlocks = ["dust-core/interp-arm9-interlocks"]
interp-r15-write-checks = ["dust-core/interp-r15-write-checks"]

xq-audio = ["dust-core/xq-audio"]

compile-shaders = ["shaderc"]

[dependencies]
dust-core = { path = "../../core" }
dust-soft-3d = { path = "../../soft-3d" }

# UI
winit = { version = "0.26", features = ["serde"] } # TODO: Update when imgui-winit-support supports winit 0.27
wgpu = { version = "0.13", features = ["spirv"] }
# TODO: Switch to imgui 0.9 when it's released with the docking API
imgui = { git = "https://github.com/imgui-rs/imgui-rs", features = ["docking", "tables-api"] }
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs" }

# System resources
rfd = "0.10"
home = "0.5"
copypasta = "0.8"
cpal = "0.14"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"

# Utils
ahash = "0.8"
futures-executor = "0.3"
crossbeam-channel = "0.5"
parking_lot = "0.12"
bitflags = "1.3"
miniz_oxide = { version = "0.6", features = ["simd"] }

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Discord RPC
discord-rpc = { git = "https://github.com/Kelpsy/discord-rpc", optional = true }

# Logging
slog = { version = "2.7", optional = true }
slog-term = { version = "2.8", optional = true }
slog-async = { version = "2.6", optional = true }
slog-imgui = { git = "https://github.com/Kelpsy/slog-imgui", features = ["async"], optional = true }

# Debugging
imgui-memory-editor = { git = "https://github.com/Kelpsy/imgui-memory-editor", optional = true }
realfft = { version = "3.0", optional = true }
gdb-protocol = { version = "0.1", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"

[build-dependencies]
shaderc = { version = "0.8", optional = true }
