[package]
name = "dust-desktop"
version = "0.0.0"
edition = "2021"
publish = false

[features]
logging = ["slog", "slog-term", "slog-async", "slog-imgui"]
log = ["logging", "dust-core/log"]
debug-views = [
    "imgui-memory-editor",
    "realfft",
    "dust-core/disasm",
    "dust-core/channel-audio-capture",
]
gdb-server = ["gdb-protocol", "dust-core/debugger-hooks"]
dldi = ["fatfs", "tempdir"]

discord-presence = ["discord-rpc"]

jit = ["dust-core/jit"]

pu-checks = ["dust-core/pu-checks"]

interp-timing-details = ["dust-core/interp-timing-details"]
interp-pipeline = ["dust-core/interp-pipeline"]
interp-pipeline-accurate-reloads = ["interp-pipeline", "dust-core/interp-pipeline-accurate-reloads"]
interp-arm9-interlocks = ["dust-core/interp-arm9-interlocks"]
interp-r15-write-checks = ["dust-core/interp-r15-write-checks"]

xq-audio = ["dust-core/xq-audio"]

[dependencies]
dust-core = { path = "../../core" }
emu-utils = { git = "https://github.com/kelpsyberry/emu-utils", features = ["std"] }
dust-soft-2d = { path = "../../render/soft-2d", features = ["threaded"] }
dust-soft-3d = { path = "../../render/soft-3d" }
dust-wgpu-2d = { path = "../../render/wgpu-2d" }
dust-wgpu-3d = { path = "../../render/wgpu-3d", features = ["threaded"] }

# UI
winit = { version = "0.29", features = ["serde"] }
wgpu = { git = "https://github.com/gfx-rs/wgpu" }
imgui = { version = "0.11", features = ["docking", "tables-api"] }
imgui-winit-support = { git = "https://github.com/kelpsyberry/imgui-rs" }
imgui-wgpu = { git = "https://github.com/kelpsyberry/imgui-wgpu" }
opener = "0.6"

# System resources
rfd = "0.12"
directories = "5.0"
copypasta = "0.10"
cpal = "0.15"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"

# Utils
ahash = "0.8"
futures-executor = "0.3"
crossbeam-channel = "0.5"
parking_lot = "0.12"
bitflags = "2.4"
miniz_oxide = { version = "0.7", features = ["simd"] }
fatfs = { version = "0.3", optional = true }
tempdir = { version = "0.3", optional = true }

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Discord RPC
discord-rpc = { git = "https://github.com/kelpsyberry/discord-rpc", optional = true }

# Logging
slog = { version = "2.7", optional = true }
slog-term = { version = "2.8", optional = true }
slog-async = { version = "2.6", optional = true }
slog-imgui = { git = "https://github.com/kelpsyberry/slog-imgui", features = ["async"], optional = true }

# Debugging
imgui-memory-editor = { git = "https://github.com/kelpsyberry/imgui-memory-editor", optional = true }
realfft = { version = "3.0", optional = true }
gdb-protocol = { version = "0.1", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
