[package]
name = "dust-wgpu-2d"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
dust-core = { path = "../../core" }
emu-utils = { git = "https://github.com/kelpsyberry/emu-utils", features = ["triple-buffer"] }
dust-soft-2d-base = { path = "../soft-2d/base" }
proc-bitfield = { version = "0.3", features = ["nightly"] }
wgpu = "0.19"
crossbeam-channel = "0.5"
parking_lot = "0.12"
