[package]
name = "dust-wgpu-3d"
version = "0.0.0"
edition = "2021"
publish = false

[features]
threaded = ["emu-utils", "crossbeam-channel", "parking_lot"]

[dependencies]
dust-core = { path = "../../core", features = ["3d-hi-res-coords"] }
dust-soft-3d = { path = "../soft-3d" }
emu-utils = { git = "https://github.com/Kelpsy/emu-utils", features = ["std"], optional = true}
proc-bitfield = { git = "https://github.com/Kelpsy/proc-bitfield", features = ["nightly"] }
ahash = "0.8"
wgpu = "0.14"
crossbeam-channel = { version = "0.5", optional = true }
parking_lot = { version = "0.12", optional = true }
