[package]
name = "dust-wgpu-3d"
version = "0.0.0"
edition = "2021"
publish = false

[features]
threaded = ["emu-utils", "crossbeam-channel", "parking_lot"]

[dependencies]
dust-core = { path = "../../core", features = ["3d-hi-res-coords"] }
dust-soft-3d = { path = "../soft-3d" }
emu-utils = { git = "https://github.com/kelpsyberry/emu-utils", features = ["triple-buffer"], optional = true}
proc-bitfield = { version = "0.3", features = ["nightly"] }
ahash = "0.8"
wgpu = "0.19"
crossbeam-channel = { version = "0.5", optional = true }
parking_lot = { version = "0.12", optional = true }
