[package]
name = "dust-web"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
log = ["slog", "dust-core/log"]

[dependencies]
dust-core = { path = "../../../core" }
dust-soft-2d = { path = "../../../soft-2d" }
dust-soft-3d = { path = "../../../soft-3d" }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
slog = { version = "2.7", optional = true }
console_error_panic_hook = "0.1"
